--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
+    "lint": "biome check . --fix",
+    "format": "biome format . --write",
     "preview": "vite preview"
   },
   "dependencies": {
@@ -12,6 +14,7 @@
     "pixi.js": "^8.4.1"
   },
   "devDependencies": {
+    "@biomejs/biome": "2.2.4",
     "@types/bun": "latest",
     "@types/three": "^0.180.0",
     "typescript": "^5.5.0",
