--- a/package.json
+++ b/package.json
@@ -2,12 +2,14 @@
   "name": "hypo",
   "type": "module",
   "private": true,
+  "homepage": "https://elumixor.github.io/hypo/",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
     "lint": "biome check . --fix",
     "format": "biome format . --write",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
     "three": "^0.168.0",
@@ -17,8 +19,10 @@
     "@biomejs/biome": "2.2.4",
     "@types/bun": "latest",
     "@types/three": "^0.180.0",
+    "gh-pages": "^6.3.0",
     "typescript": "^5.5.0",
     "vite": "^5.4.0",
-    "vite-plugin-singlefile": "^2.3.0"
+    "vite-plugin-singlefile": "^2.3.0",
+    "vite-tsconfig-paths": "^5.1.4"
   }
 }
