--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
+    "check": "tsc --noEmit && bun run lint && bun run format",
     "lint": "biome check . --fix",
     "format": "biome format . --write",
     "preview": "vite preview",
