feat: implement comprehensive resource management system
- Add type-safe resource loading system with fluent API
- Support for 3D models (GLB/GLTF) and 2D textures (PNG/JPG/WebP)
- Move and organize all game assets with consistent naming
- Create public/assets/ for Vite accessibility
- Add development tools: asset viewer, resource demo, test pages
- Configure Git LFS tracking for binary assets
- Move documentation to docs/ folder with improved structure
- Update Player/Enemy to use resource system with fallbacks
- Add comprehensive TypeScript types and error handling

Assets added:
- 3D models: Drone, Helios, Portal, Rocks
- Textures: Character concepts and game textures
- Development tools in scripts/ folder

--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "lint": "biome check . --fix",
     "format": "biome format . --write",
     "preview": "vite preview",
-    "deploy": "gh-pages -d dist"
+    "deploy": "gh-pages -d dist",
+    "assets": "bun run scripts/launch-viewer.ts",
+    "test-resources": "open http://localhost:5173/hypo/scripts/test-resources.html"
   },
   "dependencies": {
     "@elumixor/frontils": "^2.14.1",
