--- a/package.json
+++ b/package.json
@@ -11,17 +11,18 @@
     "format": "biome format . --write",
     "preview": "vite preview",
     "deploy": "gh-pages -d dist",
-    "assets": "bun run scripts/launch-viewer.ts",
-    "test-resources": "open http://localhost:5173/hypo/scripts/test-resources.html"
+    "asset-viewer": "asset-viewer ./public/assets"
   },
   "dependencies": {
     "@elumixor/frontils": "^2.14.1",
+    "@elumixor/thrixi-resources": "^1.0.6",
     "gsap": "^3.13.0",
     "pixi.js": "^8.4.1",
     "three": "^0.168.0"
   },
   "devDependencies": {
     "@biomejs/biome": "2.2.4",
+    "@elumixor/asset-viewer": "^2.0.4",
     "@types/bun": "latest",
     "@types/three": "^0.180.0",
     "gh-pages": "^6.3.0",
