--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "vite --force",
     "build": "vite build",
-    "check": "tsc --noEmit && npm run lint && npm run format",
+    "check": "tsc --noEmit && bun run lint && bun run format",
     "lint": "biome check . --fix",
     "format": "biome format . --write",
     "preview": "vite preview",
@@ -16,10 +16,10 @@
   "dependencies": {
     "@elumixor/event-emitter": "^1.0.3",
     "@elumixor/frontils": "^2.14.1",
-    "@elumixor/thrixi-resources": "^1.0.10",
+    "@elumixor/thrixi-resources": "^1.2.0",
     "gsap": "^3.13.0",
     "pixi.js": "^8.4.1",
-    "three": "^0.168.0"
+    "three": "^0.180.0"
   },
   "devDependencies": {
     "@biomejs/biome": "2.2.4",
