--- a/biome.jsonc
+++ b/biome.jsonc
@@ -21,6 +21,7 @@
       "suspicious": {
         "noExplicitAny": "error",
         "noEmptyBlockStatements": "error",
+        "noAssignInExpressions": "off", // for nice in-line lambda
         "noUnknownAtRules": "off" // Tailwind CSS uses custom at-rules
       },
       "complexity": {
